Reordering notebook imports using isort.

--- a/spectrogram_segmentation.ipynb
+++ b/spectrogram_segmentation.ipynb
@@ -93,29 +93,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import glob\n",
-    "import torch\n",
-    "import torchvision\n",
-    "import torchmetrics\n",
+    "import os\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import pytorch_lightning as pl\n",
-    "\n",
-    "from PIL import Image\n",
+    "import torch\n",
+    "import torchmetrics\n",
+    "import torchvision\n",
     "from osgeo import gdal\n",
-    "\n",
+    "from PIL import Image\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision.io import read_image\n",
-    "from torchvision.datasets import VisionDataset\n",
-    "from torchvision.transforms import v2\n",
-    "from torchmetrics.classification import MulticlassAccuracy\n",
-    "from torchmetrics.classification import MulticlassConfusionMatrix\n",
     "from torchmetrics import JaccardIndex as jac_ind\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay"
+    "from torchmetrics.classification import MulticlassAccuracy, MulticlassConfusionMatrix\n",
+    "from torchvision.datasets import VisionDataset\n",
+    "from torchvision.io import read_image\n",
+    "from torchvision.transforms import v2"
    ]
   },
   {
@@ -996,9 +993,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spectrogram-segmentation",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "spectrogram-segmentation"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1010,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
