Removing isort, and adding actions to lint and ensure clean notebooks.
Fixing danging linting issue in the tutorial notebook, so I expect the workflow to pass.

--- a/spectrogram_segmentation.ipynb
+++ b/spectrogram_segmentation.ipynb
@@ -961,6 +961,7 @@
    "outputs": [],
    "source": [
     "# Grab the first NR_LTE signal\n",
+    "PATH_TO_MATLAB5G_TRAINING_DATA = os.getcwd()\n",
     "spec_path = os.path.join(PATH_TO_MATLAB5G_TRAINING_DATA, \"LTE_NR\", \"LTE_NR_frame_0.png\")\n",
     "spectrogram = read_image(spec_path)  # Image has both NR and LTE signal\n",
     "spectrogram = spectrogram.to(device)\n",
