Cleanup of plain text near the beginning of the tutorial

--- a/spectrogram_segmentation.ipynb
+++ b/spectrogram_segmentation.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# Spectrogram Segmentation\n",
     "\n",
-    "In this example, we use PyTorch and PyTorch Lightning to train deep learning models to differentiate between \n",
-    "5G NR and 4G LTE signals within wideband spectrograms.s)."
+    "In this example, we use [PyTorch](https://pytorch.org/) and [PyTorch Lightning](https://lightning.ai/docs/pytorch/stable/) to train deep learning models to differentiate between 5G NR and 4G LTE signals within wideband spectrograms."
    ]
   },
   {
@@ -16,9 +15,7 @@
    "source": [
     "## Outline\n",
     "\n",
-    "This example is divided into the following sections:\n",
-    "\n",
-    "**[Background Information](#background):** Contextualize the problem and introduce the machine learning frameworks and tools used in this example.\n",
+    "**[Background Information](#background):** We contextualize the problem and introduce the machine learning frameworks, tools, and datasets used in this example.\n",
     "\n",
     "**[Set-up](#set-up):** Install the necessary libraries.\n",
     "\n",
@@ -26,9 +23,9 @@
     "\n",
     "**[Model Training](#model-training):** Train a machine learning model on the dataset.\n",
     "\n",
-    "**[Model Verification](#model-verification):** Asses model performance using a suite common machine learning metrics\n",
+    "**[Model Verification](#model-verification):** Assess model performance using a suite of common machine learning metrics\n",
     "\n",
-    "**[Challenge Data](#challange-data):** Challange the model with combined frames with both LTE and NR signal.\n",
+    "**[Challenge Data](#challange-data):** Challange the model on combined frames with both LTE and NR signal.\n",
     "\n",
     "**[Conclusions & Next Step](#conclusion-&-next-steps):** Interpret results, summarize learnings, and suggest further steps to extend this example."
    ]
@@ -46,15 +43,15 @@
     "\n",
     "A spectrogram, which depicts the frequency spectrum of a signal over time, is just an image. Consequently, we \n",
     "apply state-of-the-art [semantic segmentation](https://www.ibm.com/topics/semantic-segmentation) techniques from \n",
-    "the field of computer vision to the problem of spectrogram anlysis. Our task is simply to assign one of the \n",
-    "following labels to each pixel: 'LTE', 'NR', 'Noise'. ('Noise' refers to the absence of signal, representing \n",
+    "the field of computer vision to the problem of spectrogram anlysis. Our task is to assign one of the \n",
+    "following labels to each pixel in the spectrogram: 'LTE', 'NR', or 'Noise'. ('Noise' refers to the absence of signal, representing \n",
     "a vacant or empty spectrum, also known as whitespace.)\n",
     "\n",
     "The machine learning models utilized in this example are DeepLabV3 models featuring ResNet-50 or MobileNet-V3 backbones. The DeepLabv3 framework was originally introduced by Chen _et al._ in their 2017 paper titled '[Rethinking Atrous Convolution for Semantic Image Segmentation](https://arxiv.org/abs/1706.05587)'. For an accessible introduction to the DeepLabV3 framework, please check out Isaac Berrios' article: [DeepLabv3: Biulding Clocks for Robust Segmentation Models](https://medium.com/@itberrios6/deeplabv3-c0c8c93d25a4).\n",
     "\n",
     "The dataset used in this example is the Spectrum Sensing 5G dataset, provided by MathWorks. This dataset contains 900 LTE frames, 900 NR frames, and 900 combined frames with both LTE and NR signal. In this example, we train exclusively on the individual LTE and NR examples, excluding the combined frames.\n",
     "\n",
-    "To ensure comparability with results obtained using MathWorks' AI-based network, we use the the hyperparameter configuration from MathWorks' spectrum sensing example: [Deep Learning Toolbox](https://www.mathworks.com/products/deep-learning.html): [Spectrum Sensing with Deep Learning to Identify 5G and LTE Signals](https://www.mathworks.com/help/comm/ug/spectrum-sensing-with-deep-learning-to-identify-5g-and-lte-signals.html)."
+    "To ensure comparability with results obtained using MathWorks' AI-based network, we use the hyperparameter configuration from MathWorks' spectrum sensing example: [Deep Learning Toolbox](https://www.mathworks.com/products/deep-learning.html): [Spectrum Sensing with Deep Learning to Identify 5G and LTE Signals](https://www.mathworks.com/help/comm/ug/spectrum-sensing-with-deep-learning-to-identify-5g-and-lte-signals.html)."
    ]
   },
   {
@@ -65,17 +62,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
+    "In this section, we install the necessary dependencies required to run the code in this notebook. These dependencies include libraries and packages for tasks such as data manipulation, visualization, and machine learning.\n",
     "\n",
-    "module_path = os.path.abspath(os.path.join(\"..\"))  # Project root\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)"
+    "**Note:** Some imports from the `torchvision` library may generate UserWarnings. These warnings can be safely ignored."
    ]
   },
   {
@@ -116,13 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,20 +118,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each frame in the dataset, there are three corresponding files:\n",
+    "In semantic segmentation, the input data typically consists of images (in this case, spectrograms), while the output data consists of pixel-wise labels (masks) where each pixel is assigned a category label (in this case, either 'LTE', 'NR', or 'Noise'). \n",
     "\n",
-    "`.png`: The spectrogram image.\n",
+    "In this example, we use [supervised learning](https://www.ibm.com/topics/supervised-learning) techniques to train our semantic segmentation models. Therefore, we need to supply both input spectrograms and the corresponding target masks for training. For each frame in the dataset, we have two separate files:\n",
     "\n",
-    "`.hdf`: The target mask.\n",
+    "- A `.png` file containing the spectrogram image to use as input to the model.\n",
     "\n",
-    "`.mat`: Frame metadata, details such as the signal sample rate and the number of DFT points used for spectrogram computation. None of this metadata is necessary for this example, so we can safely ignore these files."
+    "- A `.hdf` file containing the target mask to use for training.\n",
+    "\n",
+    "The Spectrum Sensing dataset also includes `.mat` files containing metadata, such as the signal sample rate and the number of DFT points used for spectrogram computation. However, none of this metadata is necessary for this example, so we can safely ignore these files."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because our dataset is specifically tailored for computer vision tasks, let's extend the [VisionDataset](https://pytorch.org/vision/main/generated/torchvision.datasets.VisionDataset.html) class."
+    "Because spectrogram segmentation is a computer vision task, let's extend the [VisionDataset](https://pytorch.org/vision/main/generated/torchvision.datasets.VisionDataset.html) class."
    ]
   },
   {
@@ -161,12 +148,13 @@
     "    # Mapping of pixel labels for different waveforms.\n",
     "    pixel_labels = {\"Noise\": 0, \"NR\": 127, \"LTE\": 255}  # noise is red, green is NR (5G), blue is LTE (4G)\n",
     "\n",
-    "    def __init__(self, root, transforms=None, transform=None, target_transform=None):\n",
-    "        \"\"\"Initialize the Spectrum Sensing 5G dataset with the root directory of the dataset and\n",
-    "        any necessary functions/transforms.\n",
+    "    def __init__(self, root, transforms: callable):\n",
+    "        \"\"\"Initialize the Spectrum Sensing 5G dataset with the root directory of the dataset.\n",
     "        \"\"\"\n",
-    "        super().__init__(root, transforms, transform, target_transform)\n",
+    "        super().__init__(root)\n",
     "        self.root = root\n",
+    "\n",
+    "        self.transforms = transforms\n",
     "\n",
     "        # Parse the dataset to extract the file names of individual LTE and NR frames.\n",
     "        files = glob.glob(os.path.join(root, \"*.png\"))\n",
@@ -182,8 +170,8 @@
     "        image_file = os.path.join(self.root, f\"{basename}.png\")\n",
     "        target_file = os.path.join(self.root, f\"{basename}.hdf\")\n",
     "\n",
-    "        print(\"image file:\\t\", image_file)\n",
-    "        print(\"pixel label file:\\t\", target_file)\n",
+    "        print(\"Image file:\\t\", image_file)\n",
+    "        print(\"Mask file:\\t\", target_file)\n",
     "\n",
     "        image = Image.open(image_file)\n",
     "\n",
@@ -1008,7 +996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
