Linting and formatting fixes.

--- a/spectrogram_segmentation.ipynb
+++ b/spectrogram_segmentation.ipynb
@@ -103,7 +103,7 @@
     "    MulticlassRecall,\n",
     ")\n",
     "from torchvision.datasets import VisionDataset\n",
-    "from torchvision.models.segmentation import (\n",
+    "from torchvision.models.segmentation import (  # noqa: F401\n",
     "    deeplabv3_mobilenet_v3_large,\n",
     "    deeplabv3_resnet50,\n",
     "    deeplabv3_resnet101,\n",
@@ -218,6 +218,7 @@
     "\n",
     "mean, std = [0.485, 0.456, 0.406], [0.229, 0.224, 0.225]\n",
     "\n",
+    "\n",
     "class Squeeze(torch.nn.Module):\n",
     "    def forward(self, target: Tensor):\n",
     "        return torch.squeeze(target)\n",
@@ -226,22 +227,18 @@
     "class DivideBy127(torch.nn.Module):\n",
     "    def forward(self, target: Tensor):\n",
     "        return torch.div(target, 127, rounding_mode=\"floor\")\n",
-    "        \n",
+    "\n",
+    "\n",
     "transform = Compose(\n",
     "    [\n",
     "        PILToTensor(),\n",
-    "        ToDtype(torch.float, scale=True), \n",
+    "        ToDtype(torch.float, scale=True),\n",
     "        Normalize(mean=mean, std=std),\n",
     "    ]\n",
     ")\n",
     "\n",
     "target_transform = Compose(\n",
-    "    [\n",
-    "        PILToTensor(), \n",
-    "        Squeeze(), \n",
-    "        DivideBy127(),  # Mapping 0 -> 0, 127 -> 1, and 255 -> 2.\n",
-    "        ToDtype(torch.long)\n",
-    "    ]\n",
+    "    [PILToTensor(), Squeeze(), DivideBy127(), ToDtype(torch.long)]  # Mapping 0 -> 0, 127 -> 1, and 255 -> 2.\n",
     ")"
    ]
   },
@@ -300,12 +297,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "inv_target_transform = Compose(\n",
-    "    [\n",
-    "        ToDtype(dtype=torch.uint8),\n",
-    "        ToPILImage()\n",
-    "    ]\n",
-    ")\n",
+    "inv_target_transform = Compose([ToDtype(dtype=torch.uint8), ToPILImage()])\n",
     "\n",
     "training_example = inv_transform(training_example)\n",
     "corresponding_mask = inv_target_transform(corresponding_mask)\n",
@@ -587,7 +579,7 @@
     "    def training_step(self, batch: Tensor, batch_idx: int) -> Tensor:\n",
     "        \"\"\"Defines a single training step.\"\"\"\n",
     "        image, target = batch\n",
-    "        preds = self(image)['out']\n",
+    "        preds = self(image)[\"out\"]\n",
     "        loss = self.loss_function(preds, target)\n",
     "        self.train_accuracy(preds, target)\n",
     "        self.log(name=\"train_accuracy\", value=self.train_accuracy, prog_bar=True)\n",
@@ -597,7 +589,7 @@
     "    def validation_step(self, batch: Tensor, batch_idx: int) -> Tensor:\n",
     "        \"\"\"Defines a single validation step.\"\"\"\n",
     "        image, target = batch\n",
-    "        preds = self(image)['out']\n",
+    "        preds = self(image)[\"out\"]\n",
     "        loss = self.loss_function(preds, target)\n",
     "        self.val_accuracy(preds, target)\n",
     "        self.log(name=\"val_accuracy\", value=self.val_accuracy, prog_bar=True)\n",
@@ -611,10 +603,7 @@
     "        )\n",
     "        lr_scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=self.step_size, gamma=self.gamma)\n",
     "\n",
-    "        return {\n",
-    "            \"optimizer\": optimizer, \n",
-    "            \"lr_scheduler\": lr_scheduler\n",
-    "        }"
+    "        return {\"optimizer\": optimizer, \"lr_scheduler\": lr_scheduler}"
    ]
   },
   {
@@ -764,7 +753,7 @@
    "outputs": [],
    "source": [
     "model.to(device)\n",
-    "confusion_matrix = MulticlassConfusionMatrix(num_classes=n_classes, normalize='true').to(device)\n",
+    "confusion_matrix = MulticlassConfusionMatrix(num_classes=n_classes, normalize=\"true\").to(device)\n",
     "\n",
     "with torch.no_grad():\n",
     "    for spect, mask in val_loader:\n",
@@ -798,35 +787,42 @@
    "outputs": [],
    "source": [
     "def print_metrics_report(dataloader: DataLoader) -> None:\n",
-    "    \"\"\"Compute accuracy, recall, precision, F1 score, and IoU (Intersection over Union), and print a report containing these metrics. \"\"\"\n",
+    "    \"\"\"Compute accuracy, recall, precision, F1 score, and IoU (Intersection over Union),\n",
+    "    and print a report containing these metrics.\"\"\"\n",
     "    metrics = [\n",
     "        MulticlassAccuracy(num_classes=n_classes, average=None),\n",
     "        MulticlassRecall(num_classes=n_classes, average=None),\n",
     "        MulticlassPrecision(num_classes=n_classes, average=None),\n",
     "        MulticlassF1Score(num_classes=n_classes, average=None),\n",
-    "        MulticlassJaccardIndex(num_classes=n_classes, average=None)\n",
+    "        MulticlassJaccardIndex(num_classes=n_classes, average=None),\n",
     "    ]\n",
     "    metrics = [m.to(device) for m in metrics]\n",
-    "    \n",
+    "\n",
     "    with torch.no_grad():\n",
     "        for spect, mask in dataloader:\n",
     "            spect, mask = spect.to(device), mask.to(device)\n",
     "            pred = (model(spect)[\"out\"]).argmax(dim=1)\n",
     "            for m in metrics:\n",
     "                m.update(pred, mask)\n",
-    "    \n",
+    "\n",
     "    metrics = [m.compute().cpu().numpy() for m in metrics]\n",
     "    metrics = [np.append(m, statistics.mean(m)) for m in metrics]\n",
-    "    \n",
-    "    df = pd.DataFrame({\n",
-    "        \"Class\": np.append(np.asarray(labels), \"Mean\"),\n",
-    "        \"Accuracy\": metrics[0],\n",
-    "        \"Recall\": metrics[1],\n",
-    "        \"Precision\": metrics[2],\n",
-    "        \"F1 Score\": metrics[3],\n",
-    "        \"Jaccard Index\": metrics[4]\n",
-    "    })\n",
-    "    print(tabulate(df, headers='keys', tablefmt='grid', showindex=False, numalign=\"center\", stralign=\"center\", floatfmt=\".2f\"))"
+    "\n",
+    "    df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"Class\": np.append(np.asarray(labels), \"Mean\"),\n",
+    "            \"Accuracy\": metrics[0],\n",
+    "            \"Recall\": metrics[1],\n",
+    "            \"Precision\": metrics[2],\n",
+    "            \"F1 Score\": metrics[3],\n",
+    "            \"Jaccard Index\": metrics[4],\n",
+    "        }\n",
+    "    )\n",
+    "    print(\n",
+    "        tabulate(\n",
+    "            df, headers=\"keys\", tablefmt=\"grid\", showindex=False, numalign=\"center\", stralign=\"center\", floatfmt=\".2f\"\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
